--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								<li class="dropdown menu__item menu__item--current">
 								</li>
 								<li><a href="gallery.html">Gallery</a></li>
-								<li><a href="health.html">HealthBot</a></li>
 								<li><a href="mail.html">Mail Us</a></li>
 							</ul>
 						</nav>
@@ -372,7 +371,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	</div>
 </div>
 <!-- //Footer -->
-
+<iframe src='https://webchat.botframework.com/embed/healthbot-0lidhe3?s=CystAePIr28.A7M-LFhBdAFFumgEirNCaudwxZ0hG-y_fpQQ6JaKmGw'
+    style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 <!-- js-scripts -->			
 	
 		<!-- js -->
