--- a/health.html
+++ b/health.html
@@ -1,2 +1,2 @@
-<iframe src="https://webchat.botframework.com/embed/healthbot-yaaynkl?s=bUKX3jHmva8.nhfBgZeBQQT4at6utm4TEK9NKyuSiMlJuwiHxo49OfI"
+<iframe src="https://webchat.botframework.com/embed/healthbot-yaaynkl?s=9gFQfEEZhis.onuEaGAHpIy3yuoqmMeH6pWXPVbfg-i126ONTNhy_uo"
     style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
